fix: overflow in saptha/hero (#7)
* fix: overflow caused by the svg in hero

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -47,6 +47,17 @@
         justify-self: self-end;
     }
 
+    @include bp(tablet) {
+        margin-block: 5rem;
+
+        > *:nth-child(odd),
+        > *:nth-child(even) {
+            justify-self: center;
+            align-self: center;
+            grid-area: auto;
+        }
+    }
+
     @include bp(desktop) {
         padding-inline: 10rem;
         grid-template-columns: repeat(3, 1fr);
