--- a/src/scss/sections/_saptha.scss
+++ b/src/scss/sections/_saptha.scss
@@ -9,20 +9,23 @@
         margin-block: auto;
         align-content: center;
         justify-items: center;
-
-        h1 > svg {
-            margin-inline: auto;
-        }
+        overflow-x: hidden;
         h1 {
             justify-content: center;
         }
+
         .heading {
             transform: translateX(9%);
+        }
+
+        .heading > * {
             width: 23rem;
             width: clamp(23rem, 14.4rem + 43vw, 66rem);
             height: 6rem;
             height: clamp(6rem, 3.697rem + 11.5vw, 17.5rem);
+            margin-inline: auto;
         }
+
         > * {
             grid-area: 2/1/3/2;
         }
